--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SigmaGPT - Your AI Chat Assistant" />
+    <meta name="description" content="NodeGPT - Your AI Chat Assistant" />
     <meta name="theme-color" content="#0f172a" />
     <link
       rel="stylesheet"
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>SigmaGPT - AI Chat Assistant</title>
+    <title>NodeGPT - AI Chat Assistant</title>
   </head>
   <body>
     <div id="root"></div>
